fixed title out of screen issue

--- a/styles.css
+++ b/styles.css
@@ -302,6 +302,9 @@ body {
 
 
 @media only screen and (max-width: 450px) {
+  .title {
+    font-size: 14px;
+  }
   .top-shelf {
     right: unset;
     top: unset;
